# mc-mod-publisher

./: Cargo.toml
src/: main.rs  publishing_info.rs
