[package]
name = "mc_mod_publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.137", features = ["derive"] }
reqwest = "0.11.11"
console = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }